@@ -1,3 +1,13 @@
+2013-02-20  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
+
+	* Makefile.in (CYGWIN_LDFLAGS): Replace -static-lib* with -static.
+	(MINGW_LDFLAGS): Ditto.
+	(ZLIB): Simplify accordingly.
+
+2012-12-14  Corinna Vinschen <corinna@vinschen.de>
+
+	* utils.sgml (mount): Document sparse mount option.
+
 2012-11-27  Christopher Faylor  <me.cygwin2012@cgf.cx>
 
 	* Makefile.in: Move CFLAGS and CXXFLAGS so that they can be manipulated
